--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,8 +80,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Check formatting
-        run: cargo fmt --check
+      - name: Check formatting (main crate only)
+        run: cargo fmt --check --package techno_sutra
 
   clippy:
     name: Clippy
