--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ bevy_kira_audio = { version = "0.24", features = ["ogg", "wav"] }
 bevy_asset_loader = { version = "0.24", default-features = false }
 
 # Portals (local)
-bevy_basic_portals = { path = "examples/bevy_basic_portals" }
+bevy_basic_portals = { path = "examples/bevy_basic_portals", default-features = false }
 
 # Egui + KBGP for keyboard/gamepad navigation
 bevy_egui = "0.38"
