fix: prevent cursor grab when hovering over egui UI in upload room
- Add UiWantsPointer resource to track when UI needs mouse input
- Check ui_wants.0 in handle_cursor_grab before locking cursor
- Add update_ui_wants_pointer system in PreUpdate schedule
- Fixes flashing UI and mouse capture issues on /upload page

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -145,6 +145,7 @@ features = [
     "XrTargetRayMode",
     "XrHandedness",
     "XrSpace",
+    "DomPointReadOnly",
     "WebGlRenderingContext",
     "WebGl2RenderingContext",
     "console",
