--- a/Trunk.toml
+++ b/Trunk.toml
@@ -17,9 +17,4 @@ stage = "post_build"
 command = "sh"
 command_arguments = ["-c", "mkdir -p dist/upload && cp 404.html dist/upload/index.html 2>/dev/null || true"]
 
-# Note: wasm-opt is handled by the CI workflow for production builds
-# The hook below is for local development optimization (optional)
-[[hooks]]
-stage = "post_build"
-command = "sh"
-command_arguments = ["-c", "for f in dist/techno_sutra*.wasm; do [ -f \"$f\" ] && wasm-opt -Oz -o \"$f\" \"$f\" 2>/dev/null || true; done"]
+# Note: wasm-opt optimization is handled via data-wasm-opt="z" in index.html
