--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,10 +104,17 @@ jobs:
   check-android:
     name: Check Android
     runs-on: ubuntu-latest
+    env:
+      NDK_VERSION: '25.2.9519653'
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+      - uses: android-actions/setup-android@v3
+      - name: Install NDK
+        run: |
+          sdkmanager --install "ndk;${{ env.NDK_VERSION }}"
+          echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/${{ env.NDK_VERSION }}" >> $GITHUB_ENV
       - run: rustup target add aarch64-linux-android
       - uses: Swatinem/rust-cache@v2
         with:
@@ -115,6 +122,7 @@ jobs:
           cache-all-crates: true
       - name: Check Android
         run: |
+          export PATH="$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH"
           cargo check --target aarch64-linux-android --no-default-features \
             --features "bevy/bevy_asset,bevy/bevy_core_pipeline,bevy/bevy_pbr,bevy/bevy_render,bevy/bevy_winit,bevy/png,bevy/jpeg"
 
