--- a/.github/workflows/_build-android.yml
+++ b/.github/workflows/_build-android.yml
@@ -124,7 +124,7 @@ jobs:
           export PATH="$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH"
           cargo apk build --release --target aarch64-linux-android \
             --no-default-features \
-            --features "bevy/bevy_asset,bevy/bevy_core_pipeline,bevy/bevy_pbr,bevy/bevy_render,bevy/bevy_winit,bevy/png,bevy/jpeg"
+            --features "bevy/bevy_asset,bevy/bevy_core_pipeline,bevy/bevy_pbr,bevy/bevy_render,bevy/bevy_winit,bevy/android-game-activity,bevy/png,bevy/jpeg"
         continue-on-error: true
 
       - name: Copy standard APK
