--- a/.github/workflows/_build-windows.yml
+++ b/.github/workflows/_build-windows.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           shared-key: windows-desktop
           cache-all-crates: true
+          cache-on-failure: true
 
       - name: Build release binary
         run: cargo build --release --features ${{ inputs.features }}
