--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -237,3 +237,124 @@ jobs:
       - name: Deploy to Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+  # ============================================
+  # PHASE 4: Create Release (after all builds on main)
+  # ============================================
+
+  create-release:
+    name: 📦 Create Release
+    needs: [build-linux, build-windows, build-macos, build-wasm]
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && always() && !failure() && !cancelled()
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get version
+        id: version
+        run: |
+          VERSION=$(grep '^version' Cargo.toml | head -1 | sed 's/.*"\(.*\)".*/\1/')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "tag=v$VERSION" >> $GITHUB_OUTPUT
+          echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Organize release files
+        run: |
+          mkdir -p release
+          
+          # Linux
+          cp artifacts/techno-sutra-linux-tarball/*.tar.gz release/ 2>/dev/null || true
+          cp artifacts/techno-sutra-linux-deb/*.deb release/ 2>/dev/null || true
+          cp artifacts/techno-sutra-linux-appimage/*.AppImage release/ 2>/dev/null || true
+          
+          # Windows
+          cp artifacts/techno-sutra-windows-zip/*.zip release/ 2>/dev/null || true
+          
+          # macOS
+          cp artifacts/techno-sutra-macos-zip/*.zip release/ 2>/dev/null || true
+          
+          # iOS
+          cp artifacts/techno-sutra-ios-ipa/*.ipa release/ 2>/dev/null || true
+          
+          # Android
+          cp artifacts/techno-sutra-android-apk/*.apk release/ 2>/dev/null || true
+          
+          # Web (zip the dist)
+          cd artifacts/techno-sutra-web && zip -r ../../release/techno-sutra-web-${{ steps.version.outputs.version }}.zip . && cd ../..
+          
+          ls -la release/
+
+      - name: Generate release notes
+        id: notes
+        run: |
+          cat > release_notes.md << 'EOF'
+          # Techno Sutra ${{ steps.version.outputs.tag }}
+          
+          🕉️ **Immersive Panorama Viewer** - Cross-platform 360° experience
+          
+          ## 🌐 Live Demo
+          
+          **[Launch Web App](https://${{ github.repository_owner }}.github.io/Vortex-R3D/)**
+          
+          ## 📥 Downloads
+          
+          | Platform | Download | Notes |
+          |----------|----------|-------|
+          | 🌐 **Web** | [techno-sutra-web.zip](../../releases/download/${{ steps.version.outputs.tag }}/techno-sutra-web-${{ steps.version.outputs.version }}.zip) | Host anywhere, runs in browser |
+          | 🐧 **Linux** | [.tar.gz](../../releases/download/${{ steps.version.outputs.tag }}/techno-sutra-linux-x64-v${{ steps.version.outputs.version }}.tar.gz) / [.deb](../../releases/download/${{ steps.version.outputs.tag }}/techno-sutra_${{ steps.version.outputs.version }}_amd64.deb) / [.AppImage](../../releases/download/${{ steps.version.outputs.tag }}/techno-sutra-linux-x64-v${{ steps.version.outputs.version }}.AppImage) | x64 |
+          | 🪟 **Windows** | [.zip](../../releases/download/${{ steps.version.outputs.tag }}/techno-sutra-windows-x64-v${{ steps.version.outputs.version }}.zip) | x64, portable |
+          | 🍎 **macOS** | [.zip](../../releases/download/${{ steps.version.outputs.tag }}/techno-sutra-macos-universal-v${{ steps.version.outputs.version }}.zip) | Universal (Intel + Apple Silicon) |
+          | 📱 **iOS** | [.ipa](../../releases/download/${{ steps.version.outputs.tag }}/techno-sutra-ios-v${{ steps.version.outputs.version }}.ipa) | Requires sideloading |
+          | 🤖 **Android** | [.apk](../../releases/download/${{ steps.version.outputs.tag }}/techno-sutra-android-v${{ steps.version.outputs.version }}.apk) | ARM64 |
+          
+          ## 🎮 Controls
+          
+          | Input | Action |
+          |-------|--------|
+          | **Click/Tap** | Capture input |
+          | **Mouse/Touch** | Look around |
+          | **WASD** | Look around (desktop) |
+          | **+/-** | Adjust FOV |
+          | **Pinch** | Zoom (mobile) |
+          | **Esc** | Release mouse |
+          
+          ## ✨ Features
+          
+          - 🌐 Equirectangular to cubemap conversion (GPU)
+          - 🎮 First-person panorama navigation
+          - 🔊 Spatial 3D audio
+          - 🥽 WebXR VR support
+          - 📱 Touch controls for mobile
+          - 🖥️ Cross-platform (Desktop, Web, Mobile)
+          
+          ---
+          
+          **Built with [Bevy](https://bevyengine.org/) 🦀**
+          EOF
+          
+          # Add recent commits
+          echo "" >> release_notes.md
+          echo "## 📝 Changes" >> release_notes.md
+          echo "" >> release_notes.md
+          git log --oneline -10 --pretty=format:"- %s" >> release_notes.md
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.version.outputs.tag }}
+          name: Techno Sutra ${{ steps.version.outputs.tag }}
+          body_path: release_notes.md
+          draft: false
+          prerelease: false
+          files: release/*
+          generate_release_notes: false
+          make_latest: true
