--- a/packaging/linux/techno-sutra.desktop
+++ b/packaging/linux/techno-sutra.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Techno Sutra
-Comment=Virtual Wisdom - Immersive panorama viewer with VR support
-GenericName=Panorama Viewer
+Comment=Virtual Wisdom - Immersive Techno Sutra DEMO with VR support
+GenericName=Techno Sutra DEMO
 Exec=techno_sutra
 Icon=techno-sutra
 Terminal=false
