--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,6 +127,7 @@ features = [
     "Url",
     "Event",
     "EventTarget",
+    "Performance",
     "XrSystem",
     "XrSession",
     "XrSessionMode",
